[package]
name = "tenebrae-server"
version = "0.1.0"
authors = ["jan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]